<resources>
    <string name="app_name">LibraryTest</string>
    <string name="next">next</string>
    <string name="previous">previous</string>
    <string name="left">左边</string>
    <string name="phone">电话</string>
    <string name="suo">锁</string>
    <string name="computer">电脑</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="shouye">首页</string>
    <string name="pinlun">评论区</string>
    <string name="shezhi">设置</string>
    <string name="suggested">小编推荐</string>
    <string name="baozha">人气爆炸</string>
    <string name="random">随机一下嘛?</string>
    <string name="songsong">松松漫画</string>
</resources>
