<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.android.librarytest.MainActivity">
    <FrameLayout
        android:layout_weight="8"
        android:layout_width="match_parent"
        android:layout_height="0dp"></FrameLayout>
    <RadioGroup
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RadioButton

            android:text="@string/left"
            android:drawableTop="@drawable/myradio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <RadioButton
            android:button="@null"

            android:text="@string/phone"
            android:drawableTop="@drawable/b"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <RadioButton

            android:text="@string/suo"
            android:drawableTop="@drawable/c"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <RadioButton

            android:text="@string/computer"
            android:drawableTop="@drawable/d"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </RadioGroup>
</LinearLayout>
