<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="150dip">
        <android.support.v4.view.ViewPager
            android:id="@+id/guanggao"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="30dip"
            android:layout_gravity="bottom"
            android:background="#20000000"
            android:gravity="center_vertical"
            android:orientation="vertical" >
            <LinearLayout
                android:layout_gravity="end"
                android:orientation="horizontal"
                android:id="@+id/dots"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <!--此处填入selector-->
                <ImageView
                    android:id="@+id/dot_1"

                    android:layout_width="10dp"
                    android:layout_height="10dp"/>
                <ImageView
                    android:id="@+id/dot_2"

                    android:layout_width="10dp"
                    android:layout_height="10dp"/>
                <ImageView
                    android:id="@+id/dot_3"
                    android:layout_width="10dp"
                    android:layout_height="10dp"/>
            </LinearLayout>
        </LinearLayout>
    </FrameLayout>
        <LinearLayout
            android:layout_marginTop="20dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="400dip">
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="40dip">
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_weight="6"
                    android:layout_width="0dp"
                    android:layout_height="match_parent">
                    <TextView
                        style="@style/EasyTitleWords"
                        android:text="@string/suggested"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent" />
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />
                </LinearLayout>
                <ImageButton
                    android:src="@drawable/refresher"
                    android:id="@+id/forMore1"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" />
            </LinearLayout>
            <GridView
                android:horizontalSpacing="5dp"
                android:verticalSpacing="5dp"
                android:id="@+id/suggestGridView"
                android:numColumns="2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
        </LinearLayout>
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="400dip">
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="40dip">
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_weight="6"
                    android:layout_width="0dp"
                    android:layout_height="match_parent">
                    <TextView
                        style="@style/EasyTitleWords"
                        android:text="@string/baozha"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent" />
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent" />
                </LinearLayout>
                <ImageButton
                    android:src="@drawable/refresher"
                    android:id="@+id/forMore2"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent" />
            </LinearLayout>
            <GridView
                android:horizontalSpacing="5dip"
                android:verticalSpacing="5dip"
                android:id="@+id/baozhaGridView"
                android:numColumns="3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
        </LinearLayout>
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="550dip">
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="40dip">
                <TextView
                    android:layout_weight="6"
                    style="@style/EasyTitleWords"
                    android:text="@string/random"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" />
                <ImageButton
                    android:layout_weight="1"
                    android:src="@drawable/refresher"
                    android:id="@+id/forMore3"
                    android:layout_gravity="end"
                    android:layout_width="0dp"
                    android:layout_height="match_parent" />
            </LinearLayout>
            <android.support.v7.widget.RecyclerView
                android:id="@+id/recycler"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
        </LinearLayout>
    </LinearLayout>

    </ScrollView>

</LinearLayout>